--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,23 +1,3 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-/* Common styles */
-/* @import url('./reset.css');
-@import url('./base.css');
-@import url('./container.css');
-@import url('./animations.css'); */
-
-/* Sections style */
-/* @import url('./header.css');
-@import url('./vite-promo.css');
-@import url('./badges.css');
-@import url('./back-link.css');
-@import url('./footer.css'); */
-
-
 * {
   font-family: 'Montserrat', sans-serif;
 }
@@ -57,18 +37,26 @@ img {
   height: auto;
 }
 
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
+.load-more {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  background: #4e75ff;
+  border-radius: 8px;
+  padding: 8px 16px;
+  outline: none;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #fff;
+  border: none;
+}
 
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
+.load-more:hover,
+.load-more:focus {
+  background: #6c8cff;
 }
 
 .loader {
@@ -100,6 +88,20 @@ img {
   background-color: #ff3d00;
   box-shadow: 30px 0 0 #302e2e;
 }
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+ }
 
 @keyframes rotate {
   0% {
@@ -231,6 +233,7 @@ input[name='query']:focus {
   .gallery-img {
     transform: scale(1.04);
   }
+
   .description {
     padding-top: 8px;
     padding-bottom: 0;
